# work_morables

./: .gitignore  AGENTS.md  CLAUDE.md  IMPROVED_RETRIEVAL_GUIDE.md  OVERVIEW.md  PLAN_DIRECTION_1.md  PROJECT_SUMMARY.md  README.md  RESULTS.md  TASKS.md  pyproject.toml  requirements.txt  run.sh
analysis/: FINDINGS.md  TODO.md  cluster_review.py  cluster_review_progress.md  clusters_full.json  moral_similarity.py  moral_similarity_flagged.csv  moral_similarity_report.md  review_decisions.json  review_morals.py  run_all.py  singleton_audit.py  singleton_cluster_proposals.md
archive/: DATA_AND_EXPERIMENTS_GUIDE.md  TASKS.md  TODO.docx  TODO.md
docs/: 05_model_comparison_walkthrough.md  07_llm_experiments_walkthrough.md  Literature_Overview.csv  ParabeLink - Fine tuning.md  TEAM_BRIEFING.md  all_experiments_catalog.md  annotation_issues.csv  clustered_recalculation_inventory.csv  clustered_recalculation_plan.md  embedding_experiments_master.csv  exp07_gemini_oracle_report.md  exp09_gemma4_report.md  exp14_finetuning_plan.md  finetuning_configs.csv  finetuning_experiment_status.md  finetuning_experiments_matrix.csv  ft_02_results_summary.md  ft_03_architecture.md  ft_03_hard_negatives_proposal.md  ft_11_5fcv_full_tracking_matrix.csv  ft_12_storal_full_tracking_matrix.csv  future_directions.md  next_steps.md  progress_summary_2026-04-27.md  results_all_experiments.csv  results_ft07_comprehensive.csv  top_relevant_experiments_runbook.md  zero_shot_config_inventory.docx  zero_shot_experiments_matrix.csv  zero_shot_full_tracking_matrix.csv  zero_shot_model_inventory.csv  (+1 more)
(+891 files in other folders)
